[package]
name = "cosmos-cash-credentials"
version = "0.1.0"
authors = ["Andrea Giacobino <no.andrea@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Library to perform Cosmos Cash credentials generation/verification"
repository = "https://github.com/noandrea/cosmos-cash-credentials"
homepage = "https://tendermint.com"


[package.metadata.wasm-pack.profile.release]
# wasm-opt = false
# wasm-opt = ['-Os', '--enable-mutable-globals']
wasm-opt = ['-Os']


[profile.release]
lto = true
opt-level = 's'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2.73"
merkletree = "0.21.0"
hex = "0.4.3"
hmac = "0.11.0"
sha2 = "0.9.5"



[dev-dependencies]
wasm-bindgen-test = "0.3.23"
